fix: align text in center on button at header

--- a/partials/_header.scss
+++ b/partials/_header.scss
@@ -51,6 +51,7 @@ i{
     border: 1px solid $neutral-color-4;
     border-radius: 4px;
 
+    text-align: center;
     transition: background-color 0.4s;
 
     &:hover{
