--- a/style.css
+++ b/style.css
@@ -52,6 +52,7 @@ i {
   color: #ffffff;
   border: 1px solid #ffffff;
   border-radius: 4px;
+  text-align: center;
   transition: background-color 0.4s;
 }
 .header-button:hover {
